--- a/About_Page.html
+++ b/About_Page.html
@@ -293,7 +293,7 @@ width:100%;
                  <div class="footer-col">
                      <h4>get help</h4>
                      <ul>
-                         <li><a href="#">about us </a></li>
+                         <li><a href="https://ishanka-git.github.io/Web-Development-Project/index.html">about us </a></li>
                           <li><a href="#">our projechts</a></li>
                            <li><a href="#">analisis</a></li>
                             <li><a href="#">rates</a></li>
