--- a/About_Page.html
+++ b/About_Page.html
@@ -4,6 +4,14 @@
 <html>
 <head>
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -101,8 +109,8 @@ margin:0;
 padding:0;
 box-sizing:border-box;
 }
-.container{
-max-width:1170px;
+.conwidth{
+width:6050px;
 
 margin:auto;
 }
@@ -123,7 +131,7 @@ list-style:none;
 .footer{
 margin-top:700px;
 background-color:black;
-padding:10px 0;
+padding:30px 0;
 }
 .footer-col{
 width:25%;
@@ -131,12 +139,12 @@ padding:0 15px;
 }
 .footer-col h4{
 font-size: 18px;
-color:black;
+color:white;
 text-transform:capitalize;
 margin-bottom: 30px;
 font-weight:500;
 position:relative;
-background-color:white;
+background-color:green;
 
 
 }
@@ -148,7 +156,7 @@ bottom: -10px;
 background-color:red;
 height:2px;
 box-sizing:border-box;
-width:50px;
+width:1485px;
 }
 
 .footer-col ul li a{
@@ -185,10 +193,10 @@ color:#24262b;
 background-color:#ffffff;
 }
 
-@media(max-width:767px){
+@media(max-width:1000px){
 .footer-col{
-width:50%;
-margin-bottom:30px;
+width:100%;
+margin-bottom:50px;
 }
 
 @media(max-width:574px){
@@ -200,6 +208,44 @@ width:100%;
 
 
 
+
+
+
+
+
+
+
+.fa {
+  padding: 20px;
+  font-size: 30px;
+  width: 50px;
+  text-align: center;
+  text-decoration: none;
+  margin: 5px 2px;
+}
+
+.fa:hover {
+    opacity: 0.7;
+}
+
+.fa-facebook {
+  background: #3B5998;
+  color: white;
+}
+
+.fa-twitter {
+  background: #55ACEE;
+  color: white;
+}
+
+.fa-instagram {
+  background: #125688;
+  color: white;
+}
+
+para{ 
+  word-spacing: 2cm;
+}
 </style>
 
 
@@ -287,51 +333,22 @@ width:100%;
 </div>
 
 
-    <footer class="footer">
-        <div class="container">
+  <center>  <footer class="footer">
+        <div class="conwidth">
              <div class="row">
                  <div class="footer-col">
-                     <h4>get help</h4>
-                     <ul>
-                         <li><a href="https://ishanka-git.github.io/Web-Development-Project/index.html">about us </a></li>
-                          <li><a href="#">our projechts</a></li>
-                           <li><a href="#">analisis</a></li>
-                            <li><a href="#">rates</a></li>
-                     </ul>
-                 </div>
-                    <div class="footer-col">
-                     <h4>onlinve</h4>
-                     <ul>
-                   <li><a href="#">about us </a></li>
-                          <li><a href="#">our projechts</a></li>
-                           <li><a href="#">analisis</a></li>
-                            <li><a href="#">rates</a></li>
-                     </ul>
-                 </div>
-                    <div class="footer-col">
-                     <h4>follow us </h4>
-                     <ul>
-                           <li><a href="#">about us </a></li>
-                          <li><a href="#">our projechts</a></li>
-                           <li><a href="#">analisis</a></li>
-                            <li><a href="#">rates</a></li>
-                     </ul>
-
-                 </div>
-                    <div class="footer-col">
-                     <h4>follow us </h4>
-                     <div class="social-links">
-                     <ul>
-                        <li><a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <li><a href="#"><i class="fab fa-twitter-f"></i></a>
-                        <li><a href="#"><i class="fab fa-instergram-f"></i></a>
-                        <li><a href="#"><i class="fab fa-linkedin-f"></i></a>
-
-                     </ul>
-                                      </div>
-                 </div>
-                </div>
-             </div>
+                  <h4>Follow Us</h4> 
+                   <ul>
+				      ​	<li> <a href="https://ishanka-git.github.io/Web-Development-Project/index.html">Home</a>	</li>
+                         ​	<li> <a href="https://ishanka-git.github.io/Web-Development-Project/Project_Page.html">Project</a>	</li>
+                         ​	<li>  <a href="https://ishanka-git.github.io/Web-Development-Project/Blog_Page.html">Blog</a>	</li>
+                          ​	<li>  <a href="https://ishanka-git.github.io/Web-Development-Project/Analysis_Page.html">Analisis</a>	</li>
+						​	<li><a href="https://ishanka-git.github.io/Web-Development-Project/Donate_Page.html">Donate</a>	</li>
+			
+				</ul>
+		
+	
+         
         </footer>
 
 
