--- a/Project_Page.html
+++ b/Project_Page.html
@@ -18,14 +18,14 @@
         <aside>
             <div class="top">
                 <div class="logo">
-                    <img src="assets/image/logo.jpg">
+                    <a href="index.html"><img src="assets/image/logo.jpg"></a>
                 </div>
                 <div class="close" id="close-btn">
                     <span class="material-icons-sharp">close</span>
                 </div>
             </div>
             <div class="sidebar">
-                <a href="#" class="active">
+                <a href="Project_Page.html" class="active">
                     <span class="material-icons-sharp">account_circle</span>
                     <h3>Profile</h3>
                 </a>
@@ -33,7 +33,7 @@
                     <span class="material-icons-sharp">park</span>
                     <h3>Planting Trees</h3>
                 </a>
-                <a href="#">
+                <a href="Donate_Page.html">
                     <span class="material-icons-sharp">paid</span>
                     <h3>Donate</h3>
                 </a>
@@ -41,7 +41,7 @@
                     <span class="material-icons-sharp">leaderboard</span>
                     <h3>leaderboard</h3>
                 </a>
-                <a href="#">
+                <a href="Analysis_Page.html">
                     <span class="material-icons-sharp">insights</span>
                     <h3>Analytics</h3>
                 </a>
