--- a/About_Page.html
+++ b/About_Page.html
@@ -239,7 +239,7 @@ width:100%;
 <div class="row">
   <div class="column">
     <div class="card">
-      <img  class="img-sise" src="https://github.com/ISHANKA-git/Web-Development-Project/blob/main/assets/image/1.jpeg" alt="ISHANKA" style="width:100%"  >
+      <img  class="img-sise" src="assets/image/1.jpeg"  >
       <div class="container">
         <h2>ISHANKA</h2>
         <p class="title"> Founder</p>
