--- a/About_Page.html
+++ b/About_Page.html
@@ -256,7 +256,7 @@ width:100%;
 
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="2.jpeg" alt="NAWANI" style="width:100%">
+      <img class="img-sise" src="assets/image/2.jpeg" alt="NAWANI" style="width:100%">
       <div class="container">
         <h2>NAWANI</h2>
         <p class="title"> Director</p>
@@ -272,7 +272,7 @@ width:100%;
   
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="3.jpeg" alt="WIMARSHANI" style="width:100%">
+      <img class="img-sise" src="assets/image/3.jpeg" alt="WIMARSHANI" style="width:100%">
       <div class="container">
         <h2>WIMARSHANI</h2>
         <p class="title">Designer</p>
@@ -288,7 +288,7 @@ width:100%;
 </div>
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="4.jpeg" alt="ISHADI" style="width:100%">
+      <img class="img-sise" src="assets/image/4.jpeg" alt="ISHADI" style="width:100%">
       <div class="container">
         <h2>ISHADI</h2>
         <p class="title">Designer</p>
@@ -305,7 +305,7 @@ width:100%;
 </div>
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="5.jpeg" alt="SHASHAN" style="width:100%" height=400px width=150px>
+      <img class="img-sise" src="assets/image/5.jpeg" alt="SHASHAN" style="width:100%" height=400px width=150px>
 		<div class="team-content">
             <div class="team-info">
       <div class="container">
