--- a/About_Page.html
+++ b/About_Page.html
@@ -46,7 +46,7 @@ margin-left:80px;
 .about-section {
   padding: 50px;
   text-align: center;
-  background-img: "b.jpg";
+  background-img: "assets/image/b.jpg";
   color: white;
   background-image: url('b.jpg');
 }
