--- a/About_Page.html
+++ b/About_Page.html
@@ -57,7 +57,7 @@ margin-left:80px;
   text-align: center;
   background-img: "b.jpg";
   color: white;
-  background-image: url('b.jpg');
+  background-image: url('assets/image/b.jpg');
 }
 
 .container {
@@ -242,7 +242,7 @@ width:100%;
 <div class="row">
   <div class="column">
     <div class="card">
-      <img  class="img-sise" src="1.jpeg	" alt="ISHANKA" style="width:100%"  >
+      <img  class="img-sise" src="assets/image/1.jpeg	" alt="ISHANKA" style="width:100%"  >
       <div class="container">
         <h2>ISHANKA</h2>
         <p class="title"> Web Developer</p>
@@ -261,7 +261,7 @@ and that is still occurring because of lifestyle choices. He believes that toget
 
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="2.jpeg" alt="NAWANI" style="width:100%">
+      <img class="img-sise" src="assets/image/2.jpeg" alt="NAWANI" style="width:100%">
       <div class="container">
         <h2>NAWANI</h2>
         <p class="title"> Web Developer</p>
@@ -278,7 +278,7 @@ and that is still occurring because of lifestyle choices. He believes that toget
   
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="3.jpeg" alt="WIMARSHANI" style="width:100%">
+      <img class="img-sise" src="assets/image/3.jpeg" alt="WIMARSHANI" style="width:100%">
       <div class="container">
         <h2>WIMARSHANI</h2>
         <p class="title">Web Developer</p>
@@ -296,7 +296,7 @@ She works in a sri lankan sustainable authority as a volunteer.</p>
 </div>
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="4.jpeg" alt="ISHADI" style="width:100%">
+      <img class="img-sise" src="assets/image/4.jpeg" alt="ISHADI" style="width:100%">
       <div class="container">
         <h2>ISHADI</h2>
         <p class="title">Web Developer</p>
@@ -315,7 +315,7 @@ she is also very good nature lover and He believes that together we can become E
 </div>
   <div class="column">
     <div class="card">
-      <img class="img-sise" src="5.jpeg" alt="SHASHAN" style="width:100%" height=400px width=150px>
+      <img class="img-sise" src="assets/image/5.jpeg" alt="SHASHAN" style="width:100%" height=400px width=150px>
 		<div class="team-content">
             <div class="team-info">
       <div class="container">
