--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -13,6 +13,7 @@
     <body>
       <section class="header">
           <nav>
+              <h2 style="color : gray">Analysis</h2>
               <a href="index.html"> <img src="website/logo2.jpeg"></a>
               <div class="nav-links">
                   <ul>
@@ -40,6 +41,8 @@
             <br>
 
 <image src="website/map.jpeg"></image>
+    </div>
+    </section>
              
              <br>
              <!--a bar graph-->
