--- a/About_Page.html
+++ b/About_Page.html
@@ -231,8 +231,10 @@ width:100%;
 
 
 
+
+
 <div class="about-section">
-  <h1 style="color:#228B22;">Who we are</h1>
+  <h1  style="color:white;">Who we are ?</h1>
   <p style="color:#ADFF2F;">GREEN WORLD GUIDE is a non profit organization that developed by undergraduates in NSBM GREEN UNIVERSITY in sri lanka
 Join today with us to support our mission.</p>
  <p style="color:#ADFF2F";>" Make a green world to next generation"</p>
