--- a/About_Page.html
+++ b/About_Page.html
@@ -20,12 +20,21 @@
 
 <style>
 
+
+
+
 hr {
   border: 1px solid red;
 }
 
+
+p.font {
+  font-variant: normal;
+}
+
+
 body {
- font-family: "Times New Roman", Times, serif;
+   font-family: "Times New Roman", Times, serif;
   margin: 0;
 }
 html {
@@ -209,7 +218,6 @@ width:100%;
 
 
 
-
 .fa {
   padding: 20px;
   font-size: 30px;
@@ -233,20 +241,24 @@ width:100%;
 
 
 
+
+
+
+
+
 <div class="about-section">
-	<h1> Who we are? </h1>
+  <h1>Who we are ?</h1>
   <p style="color:#ADFF2F;">GREEN WORLD GUIDE is a non profit organization that developed by undergraduates in NSBM GREEN UNIVERSITY in sri lanka
 Join today with us to support our mission.</p>
  <p style="color:#ADFF2F";>" Make a green world to next generation"</p>
  
 </div>
 
-
 <h1 style="color:green "><center>Our Team</center></h1>
 <div class="row">
   <div class="column">
     <div class="card">
-      <img  class="img-sise" src="assets/image/1.jpeg" alt="ISHANKA" style="width:100%"  >
+      <img  class="img-sise" src="assets/image/1.jpeg	" alt="ISHANKA" style="width:100%"  >
       <div class="container">
         <h2>ISHANKA</h2>
         <p class="title"> Web Developer</p>
