--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a href="About_Page.html" ><li >About  </li> </a>
                 </ul>
             </div>
-            <div class="login-btn">Login</div>
+            <div class="login-btn"><a href="Login.html" >Login </a></div>
         </div>
         <div class="banner">
             <div class="app-text">
