--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>We all have the power to regreen the world.When you contribute to Green World Guide organization, you are doing more than just planting trees. And many more.</p>
 
                 <div class="btn-group">
-                    <div class="signup-btn">Sign Up Now</div>
+                    <div class="signup-btn"><a href="Signup.html">Sign Up Now</a></div>
                     <div class="play-btn">
                         <div class="play-btn-inner">
                             <i class="fa fa-play"></i>
