--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -12,7 +12,7 @@
 
     <!-- ----------------------------  Navigation ---------------------------------------------- -->
  
-                <h2 style="color : gray">Blooger</h2> 
+                <h2 style="color : gray">Blog</h2> 
                 
     <!----------------------------- Main Site Section ------------------------------>
 
