--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -4,8 +4,130 @@
 <head>
    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
    
+    <!-- footer-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+
+
+
+
+
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<style>
+hr.h2 {
+  border: 10px solid green;
+  border-radius: 5px;
+}
+
+
+
+hr.red {
+  border: 1px solid red;
+}
+
+div.place {
+	
+  position: relative;
+  width: 450px;
+  height: 50px;
+  border: 3px solid black;
+	float:right;
+margin-right:200px;
+margin-top:180px;
+} 
+div.place1 {
+	
+  position: relative;
+  width: 650px;
+  height: 100px;
+  border: 3px solid black;
+	float:right;
+margin-right:50px;
+margin-top:180px;
+} 
+
+div.place2 {
+	
+  position: relative;
+  width: 650px;
+  height: 100px;
+  border: 3px solid black;
+	float:right;
+margin-right:50px;
+margin-top:250px;
+} 
+
+
+
+
+.footer{
+margin-top:100px;
+background-color:black;
+padding:30px 0;
+}
+.footer-col{
+width:25%;
+padding:0 15px;
+}
+.footer-col h4{
+font-size: 18px;
+color:white;
+text-transform:capitalize;
+margin-bottom: 30px;
+font-weight:500;
+position:relative;
+background-color:green;
+
+
+}
+.footer-col h4::before{
+content:'';
+position:absolute;
+Left:0;
+bottom: -10px;
+background-color:red;
+height:2px;
+box-sizing:border-box;
+width:375px;
+}
+
+.footer-col ul li a{
+margin-botom:10px;
+}
+.footer-col ul li a{
+font-size:16px;
+text-transform:capitalize;
+color:white;
+text-decoration:none;
+font-weight:300;
+display:block;
+transition:all 0.3s ease;
+}
+
+.footer-col ul li a:hover{
+color:#ffffff;
+padding-left: 5px;
+}
+.footer-col .social-links a{
+display:inline-block;
+height:40px;
+width:40px;
+background-color:reba(255,255,255,0.2);
+margin:0 10px 10px 0;
+text-align:center;
+Line-height: 40px;
+border-radius:50%color:white;
+transition:all 0.5s ease;
 </head>
 
 <body>
