--- a/About_Page.html
+++ b/About_Page.html
@@ -18,219 +18,7 @@
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 
 
-<style>
-
-
-
-
-hr {
-  border: 1px solid red;
-}
-
-
-p.font {
-  font-variant: normal;
-}
-
-
-body {
-   font-family: "Times New Roman", Times, serif;
-  margin: 0;
-}
-html {
-  box-sizing: border-box;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-
-.column {
-  float: left;
-  width: 33.3%;
-  margin-bottom: 16px;
-  padding: 0 8px;
-}
-
-.card {
-height:600px;
-width:400px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  margin: 8px;
-margin-left:80px;	
-
-}
-
-.about-section {
-  padding: 50px;
-  text-align: center;
-  background-img: "b.jpg";
-  color: white;
-  background-image: url('assets/image/b.jpg');
-}
-
-.container {
-  padding: 0 16px;
-}
-
-.container::after, .row::after {
-  content: "";
-  clear: both;
-  display: table;
-}
-
-.title {
-  color: grey;
-}
-
-.img-sise{
-height:400px;
-}
-
-
-@media screen and (max-width: 650px) {
-  .column {
-    width: 100%;
-    display: block;
-  }
-}
-
-.button {
-  border: none;
-  outline: 0;
-  display: inline-block;
-  padding: 8px;
-  color: white;
-  background-color: #000;
-  text-align: center;
-  cursor: pointer;
-  width: 100%;
-}
-
-.button:hover {
-  background-color: #555;
-
-
-}
-
-
-
-*{
-margin:0;
-padding:0;
-box-sizing:border-box;
-}
-.conwidth{
-width:6050px;
-
-margin:auto;
-}
-.row{
-display:flex;
-flex-wrap:wrap;
-}
-body{
-Line-height:1.5;
-font-family:sans-serif;
-}
-
-ul{
-list-style:none;
-}
-
-
-.footer{
-margin-top:700px;
-background-color:black;
-padding:30px 0;
-}
-.footer-col{
-width:25%;
-padding:0 15px;
-}
-.footer-col h4{
-font-size: 18px;
-color:white;
-text-transform:capitalize;
-margin-bottom: 30px;
-font-weight:500;
-position:relative;
-background-color:green;
-
-
-}
-.footer-col h4::before{
-content:'';
-position:absolute;
-Left:0;
-bottom: -10px;
-background-color:red;
-height:2px;
-box-sizing:border-box;
-width:1485px;
-}
-
-.footer-col ul li a{
-margin-botom:10px;
-}
-.footer-col ul li a{
-font-size:16px;
-text-transform:capitalize;
-color:blue;
-text-decoration:none;
-font-weight:300;
-display:block;
-transition:all 0.3s ease;
-}
-
-.footer-col ul li a:hover{
-color:#ffffff;
-padding-left: 5px;
-}
-.footer-col .social-links a{
-display:inline-block;
-height:40px;
-width:40px;
-background-color:reba(255,255,255,0.2);
-margin:0 10px 10px 0;
-text-align:center;
-Line-height: 40px;
-border-radius:50%color:white;
-transition:all 0.5s ease;
-
-}
-.footer-col .social-links a:hover{
-color:#24262b;
-background-color:#ffffff;
-}
-
-@media(max-width:1000px){
-.footer-col{
-width:100%;
-margin-bottom:50px;
-}
-
-@media(max-width:574px){
-.footer-col{
-width:100%;
-
-}
-
-
-
-.fa {
-  padding: 20px;
-  font-size: 30px;
-  width: 50px;
-  text-align: center;
-  text-decoration: none;
-  margin: 5px 2px;
-}
-
-
-</style>
-
-
+   <link rel="stylesheet" type="text/css" href="assets/css/About_Page.css"  />
 
 </head>
 
