--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -261,7 +261,7 @@ margin-top:800px;
     
  
                 <h2 style="color : gray">Blog</h2> 
-   <center><img src="pic/12.jpeg" >
+   <center><img src="assets/image/b1.jpeg" >
                 
      <h2>For a Sustainable Future</center>
 
