--- a/Login.html
+++ b/Login.html
@@ -30,7 +30,7 @@
                         <input type="submit" value="Sign in" name="">
                     </div>
                     <div class="inputBx">
-                        <p>Don't have an account? <a href="#">Sign up</a></p>
+                        <p>Don't have an account? <a href="Signup.html">Sign up</a></p>
                     </div>
                 </form>
             </div>
