--- a/About_Page.html
+++ b/About_Page.html
@@ -20,6 +20,17 @@
 
    <link rel="stylesheet" type="text/css" href="assets/css/About_Page.css"  />
 
+	
+	
+	<style>
+		.about-section {
+  padding: 50px;
+  text-align: center;
+  background-img: "b.jpg";
+  color: white;
+  background-image: url('assets/image/b.jpg');
+}
+	</style>
 </head>
 
 
