--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -11,7 +11,7 @@
       <section class="header">
           <nav>
               <h2 style="color : gray">Analysis</h2>
-              <a href="index.html"> <img src="website/logo2.jpeg"></a>
+              <a href="index.html"> <img src="assets/b1.jpeg"></a>
               <div class="nav-links">
                   <ul>
                       
@@ -47,7 +47,7 @@
       <section>
 </section>   
          
-<image src="website/a.jpeg"></image>
+<image src="assets/a2.jpeg"></image>
     <br>
   <br>
   <hr color="red">
@@ -56,7 +56,7 @@
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
   <br>
  
-    <image src="website/map.jpeg"></image>
+    <image src="assets/a3.jpeg"></image>
  </div>
 
 </div>
