--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -48,7 +48,7 @@
       <section>
 </section>   
          
-<image src="assets/image/a2.jpeg"></image>
+<image src="assets/image/A2.jpeg"></image>
     <br>
   <br>
   <hr color="red">
@@ -57,7 +57,7 @@
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
   <br>
  
-    <image src="assets/image/a3.jpeg"></image>
+    <image src="assets/image/A3.jpeg"></image>
  </div>
 
 </div>
