--- a/graph.html
+++ b/graph.html
@@ -1,1 +1,170 @@
 
+<html>
+<head>
+<meta charset="utf-8">
+<title> ana </title>
+
+
+<style>
+        body{
+        margin:0;
+        padding:0;
+        font-family:sans-serif;
+        }
+
+        section{
+        width:100%;
+        height:100%;
+        background:white;
+        }
+
+        .box{
+        position:absolute;
+        top:50%;
+        left:50%;
+        transform: translate(-50%,-50%);
+        width:550px;
+        height:300px;
+        background:transparent;
+        border-bottom: 1px solid #000;
+        border-left: 1px solid #000; 
+        display:flex;
+
+        
+        }
+        
+    .box .skill{
+    position: relative;
+    flex: 1;
+    text-align: center;
+    }
+
+
+    .box .skill .graph
+    {
+    position: absolute;
+    width: 40px;
+    background: purple;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    }
+
+    .box .skill .graph ::before
+    {
+        content: '';
+        position: absolute;
+        top:  2px;
+        left: 2px;
+        right: 2px;
+        bottom: 0;
+
+    }
+
+    .box .skill .graph ::after
+    {
+        content: '';
+        position: absolute;
+        top: 0;
+        width: 50%;
+        height: 100%;
+        background:  rgba(255,255,255,.1);
+
+
+    }
+
+    .box .skill .graph .percent
+    {
+        position: absolute;
+        top: -40px;
+        left: 50%;
+        transform:translateX(-50%);
+        text-align: center;
+        color:  black;
+        font-weight: bold;
+
+    }
+
+
+    .box .skill .name
+    {
+        position:absolute;
+        bottom: -30px;
+        left: 50%;
+        transform: translateX(-50%);
+        text-align: center;
+        color: #fff;
+        background: #010514;
+        padding: 2px 6px;
+        border-radius: 4px;
+    }
+
+
+
+
+
+</style>
+
+</head>
+
+
+
+<body>
+<section>
+	<div class ="box">
+<div class="skill">
+<div class="graph" style="height: 50%">
+<div class="percent">50%</div>
+</div>
+<div class="name" >june</div>
+</div>
+
+<div class="skill">
+<div class="graph"style="height: 55%">
+<div class="percent">55%</div>
+</div>
+<div class="name" >may</div>
+</div>
+
+
+<div class="skill">
+<div class="graph" style="height: 65%">
+<div class="percent">65%</div>
+</div>
+<div class="name" >april</div>
+</div>
+
+
+
+<div class="skill">
+<div class="graph"style="height: 75%">
+<div class="percent">75%</div>
+</div>
+<div class="name" >march</div>
+</div>
+
+<div class="skill">
+<div class="graph"style="height: 85%">
+<div class="percent">85%</div>
+</div>
+<div class="name" >feb</div>
+</div>
+
+	
+
+
+
+
+</section>
+
+
+
+
+
+
+
+</body>
+
+
+
+</html>
