--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -16,7 +16,7 @@
               <div class="nav-links">
                   <ul>
                       
-                    <li><a href="index.html"Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href=>About us</a></li>
                   </ul>
               </div>
