--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -57,7 +57,7 @@
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
   <br>
  
-   center> <image src="assets/image/A3.jpeg"></image>
+   <center> <image src="assets/image/A3.jpeg"></image>
  </div>
 
 </div>
