--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -16,8 +16,8 @@
               <div class="nav-links">
                   <ul>
                       
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href=>About us</a></li>
+                    <li><a href="index.html"Home</a></li>
+                    <li><a href="About us"</a></li>
                   </ul>
               </div>
           </nav>
@@ -50,6 +50,7 @@
          
 <center><image src="assets/image/A2.jpeg"></image>
     <br>
+	<a href="graph.html">Analysis graph</a>
   <br>
   <hr color="red">
   <br>
@@ -57,13 +58,53 @@
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
   <br>
  
-   <center> <image src="assets/image/A3.jpeg"></image>
+   center> <image src="assets/image/A3.jpeg"></image>
  </div>
 
 </div>
       </section>  
+    </body>
+
+	<div class ="box">
+<div class="skill">
+<div class="graph" style="height: 50%">
+<div class="percent">50%</div>
+</div>
+<div class="name" >june</div>
+</div>
+
+<div class="skill">
+<div class="graph"style="height: 55%">
+<div class="percent">55%</div>
+</div>
+<div class="name" >may</div>
+</div>
 
 
+<div class="skill">
+<div class="graph" style="height: 65%">
+<div class="percent">65%</div>
+</div>
+<div class="name" >april</div>
+</div>
+
+
+
+<div class="skill">
+<div class="graph"style="height: 75%">
+<div class="percent">75%</div>
+</div>
+<div class="name" >march</div>
+</div>
+
+<div class="skill">
+<div class="graph"style="height: 85%">
+<div class="percent">85%</div>
+</div>
+<div class="name" >feb</div>
+</div>
+
+	
 
 
 
