--- a/Donate_Page.html
+++ b/Donate_Page.html
@@ -27,7 +27,7 @@
             <!--radio buttons end-->
             <!--slide images start-->
             <div class="slide first">
-              <img src="/william-mattson-Oc1kPC85R74-unsplash.jpg" alt="">
+              <img src="assets/image/donate1.jpg" alt="">
             </div>
             <div class="slide">
               <img src="/william-mattson-Oc1kPC85R74-unsplash.jpg" alt="">
