--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -38,7 +38,7 @@
            <a href ="file:///C:/Users/wimarshani/Dropbox/My%20PC%20(LAPTOP-SSVC0BQ7)/Desktop/Anform.html">CLICK HERE TO FILL THE ANALYSIS FORM</a>
          </div>
 <br>
-<hr color="red">
+<hr color="blue">
 <br>
 <div class="graph"></div>
 <h1 style="text-align:center">Monthly tree planting rate-2021</h1>
@@ -49,7 +49,7 @@
          
 <center><image src="assets/image/A2.jpeg"></image>
     <br>
-	<a href="graph.html">Analysis graph</a>
+	<a href="graph.html">Analys is graph</a>
   <br>
   <hr color="red">
   <br>
@@ -57,7 +57,8 @@
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
   <br>
  
-   center> <image src="assets/image/A3.jpeg"></image>
+<image src="assets/image/A3.jpeg"></image>
+</center>
  </div>
 
 </div>
