--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -51,7 +51,7 @@
     <br>
 	<a href="graph.html">Analys is graph</a>
   <br>
-  <hr color="red">
+  <hr color="blue">
   <br>
   <br>
   <h1 style="text-align:center">Forest cover area in srilanka</h1>
