--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -48,8 +48,9 @@
 </section>   
          
 <center><image src="assets/image/A2.jpeg"></image>
+  <br><br>
     <br>
-	<a href="graph.html">Analys is graph</a>
+	<a href="graph.html">Annual analysis graph</a>
   <br>
   <hr color="blue">
   <br>
