--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -50,7 +50,7 @@
 <center><image src="assets/image/A2.jpeg"></image>
   <br><br>
     <br>
-	<a href="graph.html">Annual analysis graph</a>
+	<a href="graph.html"><h2>Annual analysis graph</h2></a>
   <br>
   <hr color="blue">
   <br>
