--- a/graph.html
+++ b/graph.html
@@ -116,14 +116,14 @@
 <div class="graph" style="height: 50%">
 <div class="percent">50%</div>
 </div>
-<div class="name" >june</div>
+<div class="name" >2017</div>
 </div>
 
 <div class="skill">
 <div class="graph"style="height: 55%">
 <div class="percent">55%</div>
 </div>
-<div class="name" >may</div>
+<div class="name" >2018</div>
 </div>
 
 
@@ -131,7 +131,7 @@
 <div class="graph" style="height: 65%">
 <div class="percent">65%</div>
 </div>
-<div class="name" >april</div>
+<div class="name" >2019</div>
 </div>
 
 
@@ -140,14 +140,14 @@
 <div class="graph"style="height: 75%">
 <div class="percent">75%</div>
 </div>
-<div class="name" >march</div>
+<div class="name" >2020</div>
 </div>
 
 <div class="skill">
 <div class="graph"style="height: 85%">
 <div class="percent">85%</div>
 </div>
-<div class="name" >feb</div>
+<div class="name" >2021</div>
 </div>
 
 	
