--- a/Donate_Page.html
+++ b/Donate_Page.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="StyleSheet" href="/style.css">
+  <link rel="StyleSheet" href="assets/css/donation.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
     integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -30,13 +30,13 @@
               <img src="assets/image/d1.jpg" width="1400px" height="700px"  alt="">
             </div>
             <div class="slide">
-              <img src="/william-mattson-Oc1kPC85R74-unsplash.jpg" alt="">
+              <img src="assets/image/donate2.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="/zoe-schaeffer-tbiV-yc903g-unsplash.jpg" alt="">
+              <img src="assets/image/donate3.jpg" alt="">
             </div>
             <div class="slide">
-              <img src="/zoe-schaeffer-W_ISm5LwKHQ-unsplash.jpg" alt="">
+              <img src="assets/image/donate4.jpg" alt="">
             </div>
             <!--slide images end-->
             <!--automatic navigation start-->
