--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -6,12 +6,15 @@
         <title>Forest area in Sri lanka</title>
         <link rel="stylesheet"href="my blogg.css">
            <link rel="stylesheet"href="assets/css/Analysis_Page.css">
-        
+      <style> 
+	      body{
+		      background-color:gray;
+	    </style>
     </head>
     <body>
       <section class="header">
           <nav>
-              <h2 style="color : gray">Analysis</h2>
+              <h2 style="color : black">Analysis</h2>
               <a href="index.html"> <img src="assets/image/b1.jpeg"></a>
               <div class="nav-links">
                   <ul>
