--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a href="Project_Page.html"><li>Project</li> </a>
                     <a href="Blog_Page.html"><li>Blog</li> </a>
                     <a href="Analysis_Page.html"><li>Analysis</li> </a>
-                    <a href="Donate_Page.html"><li>Donate</li> </a>
+                    <a href="donation-previous-page.html"><li>Donate</li> </a>
                     <a href="About_Page.html" ><li >About  </li> </a>
                 </ul>
             </div>
