--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -262,7 +262,7 @@ margin-top:800px;
     
  
                 <h2 style="color : gray">Blog</h2> 
-   <center><img src="assets/image/b1.jpeg" >
+   <center><a href="index.html"><img src="assets/image/b1.jpeg" ></a>
                 
      <h2>For a Sustainable Future</center>
 
