--- a/Blog_Page.html
+++ b/Blog_Page.html
@@ -151,6 +151,8 @@ width:100%;
 
 
 
+
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap');
 body{
     line-height: 1.5;
@@ -267,6 +269,9 @@ margin-top:800px;
      <h2>For a Sustainable Future</center>
 
    <hr class="red">
+
+   
+    </Div>
 
            
                             
