--- a/About_Page.html
+++ b/About_Page.html
@@ -127,7 +127,7 @@ she is also very good nature lover and He believes that together we can become E
 		<div class="team-content">
             <div class="team-info">
       <div class="container">
-        <h2>CHATHULA SHASHAN</h2>
+        <h2>SHASHAN</h2>
         <p class="title">Web Developer</p>
  <p><button class="button">
 <details>
