--- a/donation-previous-page.html
+++ b/donation-previous-page.html
@@ -61,7 +61,7 @@
 
 
                   <div class="slider-btn">
-                      <div class="btn btn-1"> <a herf="http://127.0.0.1:5504/index.html">Donate now</a>   </div>
+                      <div class="btn btn-1"> <a herf="Donate_Page.html">Donate now</a>   </div>
                   </div>
                 </div>
               </div>
