--- a/donation-previous-page.html
+++ b/donation-previous-page.html
@@ -52,6 +52,7 @@
                   <div class="slider-btn">
                 >
                       <div class="btn btn-1"> <a herf="Donate_Page.html">Donate now</a>   </div>
+                    <a href="https:"eb-Development-Project/Donate_Page.html">hellow </a> 
                 </div>
                 </div>
               </div>
