--- a/donation-previous-page.html
+++ b/donation-previous-page.html
@@ -51,8 +51,8 @@
                   <h5>Donate And Help us to <span>change the world</span></h5>
                   <div class="slider-btn">
                 >
-                      <div class="btn btn-1"> <a herf="Donate_Page.html">Donate now</a>   </div>
-                    <a href="https:"Donate_Page.html">hellow </a> 
+                      <div class="btn btn-1"> <a herf="About_Page.html">Donate now</a>   </div>
+                    <a href="https:"About_Page.html">hellow </a> 
                 </div>
                 </div>
               </div>
