--- a/Analysis_Page.html
+++ b/Analysis_Page.html
@@ -47,7 +47,7 @@
            <br>
            <br>
            
-           <a href ="file:///C:/Users/wimarshani/Dropbox/My%20PC%20(LAPTOP-SSVC0BQ7)/Desktop/Anform.html">CLICK HERE TO FILL THE ANALYSIS FORM</a>
+           <a href ="registers.html">CLICK HERE TO FILL THE ANALYSIS FORM</a>
          </div>
 <br>
 <hr color="blue">
