--- a/donation-previous-page.html
+++ b/donation-previous-page.html
@@ -63,7 +63,7 @@
 
 
                   <div class="slider-btn">
-                      <div class="btn btn-1"> <a herf="Donate_Page.html">Donate now</a>   </div>
+                      <div class="btn btn-1"> <a herf="https://ishanka-git.github.io/Web-Development-Project/Donate_Page.html">Donate now</a>   </div>
                   </div>
                 </div>
               </div>
