--- a/donation-previous-page.html
+++ b/donation-previous-page.html
@@ -50,7 +50,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>Donate And Help us to <span>change the world</span></h5>
                   <div class="slider-btn">
-                    <div class="btn btn-1">Donate now</div>
+                    <a href="/Donate_Page.html"><div class="btn btn-1"> Donate now</div></a>
                 </div>
                 </div>
               </div>
@@ -61,7 +61,7 @@
 
 
                   <div class="slider-btn">
-                      <div class="btn btn-1"> <a herf="http://127.0.0.1:5504/index.html">Donate now</a>   </div>
+                    <a href="/Donate_Page.html"><div class="btn btn-1"> Donate now</div></a>
                   </div>
                 </div>
               </div>
@@ -70,7 +70,7 @@
                 <div class="carousel-caption d-none d-md-block">
                   <h5>We plant more than <span> 10,000 trees</span></h5>
                   <div class="slider-btn">
-                    <div class="btn btn-1"> Donate now</div>
+                    <a href="/Donate_Page.html"><div class="btn btn-1"> Donate now</div></a>
                 </div>
                 </div>
               </div>
